@@ -14,6 +14,8 @@ Version 8.31
 
 4.  Partial matching support is added to the JIT compiler.
 
+5.  Improved \X and back reference partial matching.
+
 
 Version 8.30 04-February-2012
 -----------------------------
